# Koto

./: .gitignore  CMakeLists.txt  README.md
includes/: Camera.hpp  Enemy.hpp  Game.hpp  GameObject.hpp  Goal.hpp  Level.hpp  Player.hpp  SceneManager.hpp  Tile.hpp
includes/Scene/: Level.hpp  Overworld.hpp  PlayScene.hpp  Scene.hpp  SceneBase.hpp  SceneManager.hpp  StartScene.hpp  Title.hpp
src/: Camera.cpp  Enemy.cpp  Game.cpp  Goal.cpp  Level.cpp  Player.cpp  SceneManager.cpp  Tile.cpp  main.cpp
src/Scene/: Level.cpp  Overworld.cpp  PlayScene.cpp  SceneManager.cpp  StartScene.cpp  Title.cpp
